adjust html, button, form, spacing; adjust logic js, correct syntax error; adjust download jq

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-size: 16px;
+  font-size: 14px;
   background-color: red;
   /* backgroung-position: center;
   background-repeat: no-repeat;
